[package]
name = "merklemap-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A CLI client for the merklemap.com API"
repository = "https://github.com/barre/merklemap-cli"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = "0.12"
reqwest-eventsource = "0.6"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3.30"
chrono = "0.4.38"
indicatif = "0.17"
